# CuBricks

./: Makefile  shell.nix
cubricks/: CMakeLists.txt
cubricks/src/: CMakeLists.txt  cubricks.cc
cubricks/src/matrix/: CMakeLists.txt  matrix.cc  matrix.hh  matrix_operations.cu  matrix_operations.hh
cubricks/src/memory_checks/: cuda_checks.hh
